# ReceiptBI

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  DEVELOPMENT_ROADMAP.md  Dockerfile  FIX_LOG.md  LICENSE  README.en.md  README.md  README.zh.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_ZH-TW.md  SECURITY.md  WINDOWS_SETUP.md  WSL_ERROR_ANALYSIS.md  auto_setup_wsl.sh  cleanup_branches.sh  debug_onboarding.html  diagnostic.sh  docker-compose.ci.yml  docker-compose.yml  fix_network.sh  fix_wsl_python.sh  manual_cleanup_guide.md  mask_with_preview.py  perplexity_copyright_analysis.md  pyproject.toml  render.yaml  (+13 more)
.github/: dependabot.yml  pull_request_template.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.serena/: project.yml
apps/api/: .env.example  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  run-tests.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_zero_config_analyst.py  0003_typed_semantic_relationships.py  0004_analysis_corrections.py  0005_correction_target_key.py  0006_semantic_execution_state.py  0007_semantic_revisions.py  0008_sanitation_recipe_revisions.py  0009_cleanup_orphan_sanitation.py  0010_defer_sanitation_parent_fk.py  0011_correction_target_ref.py  0012_retire_legacy_settings.py  0013_model_health.py  0014_candidate_hygiene.py  0015_editable_reports.py  0016_processing_consent.py  0017_semantic_validation_jobs.py  0018_semantic_scope_nodes.py  0019_retire_legacy_column_candidates.py  0020_retire_stale_semantic_recommendations.py  0021_semantic_inventory_jobs.py  0022_retire_legacy_user_scope.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: __init__.py  auth.py  chat.py  config.py  connections.py  export_import.py  history.py  models.py  projects.py  prompts.py  reports.py  schema.py  semantic.py  settings.py  standing.py  system.py  user_config.py
apps/api/app/core/: __init__.py  config.py  demo_db.py  security.py
apps/api/app/db/: __init__.py  base.py  metadata.py  session.py  tables.py
apps/api/app/i18n/: __init__.py
apps/api/app/models/: __init__.py  auth.py  chat.py  common.py  config.py  export_import.py  history.py  prompt.py  reports.py  schema.py  semantic.py  workspace.py
apps/api/app/services/: __init__.py  analysis_checkpoint.py  analysis_playbook_runner.py  analyst_runtime.py  app_settings.py  business_decision_slots.py  chat_runtime.py  conversation_context.py  correction_completion.py  correction_targets.py  credential_migration.py  data_preflight.py  database.py  database_adapters.py  database_value_preflight.py  dependency_manager.py  engine_content.py  engine_diagnostics.py  engine_prompts.py  engine_visualization.py  engine_workflow.py  execution.py  execution_context.py  execution_policy.py  golden_regression.py  gptme_engine.py  legacy_ts_model_import.py  metric_candidate_learning.py  metric_formula.py  metric_lineage.py  migration_bootstrap.py  model_runtime.py  project_context.py  python_runtime.py  python_sandbox.py  report_draft.py  result_filters.py  result_processor.py  sanitation_contract.py  sanitation_revisions.py  (+20 more)
apps/api/tests/: __init__.py  conftest.py  test_analysis_corrections.py  test_analysis_playbook_runner.py  test_analysis_playbooks.py  test_analyst_partial_report_guard.py  test_analyst_result_budget.py  test_api_cold_restart_recovery.py  test_app_settings.py  test_auth.py  test_business_confirmation.py  test_business_decision_slots.py  test_business_execution_guards.py  test_candidate_hygiene_migration.py  test_chart_spec.py  test_chat_runtime.py  test_config_integration.py  test_connections.py  test_conversation_context.py  test_correction_completion.py  test_correction_targets.py  test_credential_migration.py  test_database.py  test_database_adapter_hardening.py  test_database_cancellation.py  test_database_checkpoint_freshness.py  test_database_constraint_catalog.py  test_database_value_preflight.py  test_demo_db.py  test_dependency_manager.py  test_desktop_safe_shutdown.py  test_execution.py  test_execution_minimal_report_fallback.py  test_execution_policy.py  test_export_import.py  test_golden_metric_lineage.py  test_gptme_engine.py  test_health.py  test_history.py  test_i18n.py  (+52 more)
backend/: ai_router.py  app.py  auth.py  cache_manager.py  config_loader.py  database.py  history_manager.py  interpreter_manager.py  llm_service.py  prompt_config.json  prompts.py  query_clarifier.py  rate_limiter.py  semantic_layer_app.py  smart_router.py  test_integration.py  utils.py  validators.py
crates/sqlite-executor-core/: Cargo.toml
crates/sqlite-executor-core/src/: lib.rs
crates/sqlite-executor-core/tests/fixtures/: reference-row-count.expected.json  reference-row-count.json
crates/sqlite-executor-sidecar/: Cargo.toml
crates/sqlite-executor-sidecar/src/: main.rs
vnext/: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
vnext/apps/workspace/: package.json  tsconfig.json
vnext/apps/workspace/src/app/: globals.css  layout.tsx
vnext/apps/workspace/src/components/: theme-provider.tsx
vnext/apps/workspace/src/components/ui/: button.tsx  command-dialog.tsx  resizable.tsx  sheet.tsx  skeleton.tsx
vnext/apps/workspace/src/components/workspace/: chart-skeleton.tsx  conversation-rail.tsx  inspector-sheet.tsx  library-sidebar.tsx  result-canvas.tsx  safe-trend-chart.tsx  sample-data.ts  workspace-shell.tsx
vnext/crates/semantic-core/: Cargo.toml
vnext/crates/semantic-core/src/: lib.rs
vnext/crates/semantic-node/: .gitignore  Cargo.toml  build.rs  package.json  smoke.cjs
vnext/crates/semantic-node/src/: lib.rs
vnext/docs/: ARCHITECTURE.md  PRODUCT-STRATEGY.md  PROJECT.md  REQUIREMENTS.md  RESEARCH-EVIDENCE.md  ROADMAP.md  STATUS.md  UI-SPEC.md
vnext/scripts/: assert-native-environment.mjs  check-path-construction.mjs  check-path-construction.test.mjs
(+391 files in other folders)
