[workspace]
members = [
  "crates/sqlite-executor-core",
  "crates/sqlite-executor-sidecar",
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
publish = false

[workspace.dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
windows-sys = { version = "=0.61.2", default-features = false, features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
