[project]
name = "querygpt-api"
version = "2.0.0"
description = "QueryGPT API Server"
requires-python = ">=3.11"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation & Settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",

    # AI & LLM
    "gptme>=0.30.0",
    "litellm>=1.40.0",

    # Data Processing & Analysis
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",

    # Database Drivers
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.9",

    # Utils
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "cryptography>=44.0.0",

    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
analytics = [
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
querygpt-api = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
