[package]
name = "receiptbi-sqlite-executor-sidecar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "receiptbi-sqlite-executor-sidecar"
path = "src/main.rs"

[dependencies]
receiptbi-sqlite-executor-core = { path = "../sqlite-executor-core" }
serde.workspace = true
serde_json.workspace = true
